--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "homepage": "https://github.com/AlesObr/kalkuacka.js#readme",
   "dependencies": {
     "express": "^4.18.2",
+    "jquery": "^3.6.1",
     "nodemon": "^2.0.20"
   }
 }
