--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "jquery": "^3.6.1",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "simple-json-db": "^2.0.0"
   }
 }
